--- a/res/layout/activity_case_details.xml
+++ b/res/layout/activity_case_details.xml
@@ -23,4 +23,12 @@
         android:layout_below="@+id/case_details_casename"
         android:text="@string/hello_world" />
 
+    <Button
+        android:id="@+id/case_details_btn_choosecase"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:text="Jogar esse caso" />
+
 </RelativeLayout>
