--- a/res/layout/activity_main_menu.xml
+++ b/res/layout/activity_main_menu.xml
@@ -19,12 +19,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="User Settings" />
-
+
     <Button
         android:id="@+id/main_menu_btn_select_cases"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical|center_horizontal"
-        android:text="Escolher Casos" />
+        android:text="@string/main_menu_btn_choose_cases" />
 
 </LinearLayout>
