--- a/res/layout/activity_main_menu.xml
+++ b/res/layout/activity_main_menu.xml
@@ -13,18 +13,24 @@
         android:gravity="center_vertical|center_horizontal"
         android:text="@string/main_menu_welcome"
         tools:context=".MainMenuActivity" />
-
+
     <Button
         android:id="@+id/main_menu_btn_user_settings"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="User Settings" />
-
+        android:text="Configurações de Usuário" />
+
     <Button
         android:id="@+id/main_menu_btn_select_cases"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical|center_horizontal"
         android:text="@string/main_menu_btn_choose_cases" />
+
+    <Button
+        android:id="@+id/main_menu_btn_cases_ongoing"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/main_menu_btn_cases_ongoing" />
 
 </LinearLayout>
